# SignalForge

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  example.py  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: python-app.yml
SignalForge/: __init__.py  nonstationary_nongaussian.py  single_chan_signal.py  stationary_gaussian.py  stationary_nongaussian.py  utils.py
docs/source/: conf.py  index.rst  modules.rst  nongauss.rst  nonstat.rst  single_chan.rst  statgauss.rst  utils.rst
tests/: nonstationary_nongaussian_test.py  single_chan_signal_test.py  stationary_gaussian_test.py  stationary_nongaussian_test.py  utils_test.py
